--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -3,7 +3,8 @@
     "page_not_found": "Page not Found!",
     "projects": "Projects",
     "success": "Success",
-    "error": "Error"
+    "error": "Error",
+    "warning": "Warning"
   },
   "auth": {
     "username": "Username",
@@ -26,7 +27,11 @@
     "yes": "Yes",
     "no": "No",
     "delete_confirmation": "Are you sure that you want to delete this Project?",
-    "created": "Project was created!"
+    "created": "Project was successfully created!",
+    "edited": "Project successfully edited!",
+    "deleted": "Project was deleted successfully!",
+    "not_changed": "Project name did not change",
+    "no_name": "Enter a project name to create a project!"
   },
   "indexcard": {
 
