feat: indexcard html files translated

--- a/indexcards-ui/src/assets/i18n/de.json
+++ b/indexcards-ui/src/assets/i18n/de.json
@@ -34,6 +34,13 @@
     "no_name": "Ein Projektname ist erforderlich, um ein Projekt zu erstellen!"
   },
   "indexcard": {
-
+    "create": "Erstelle eine Karteikarte",
+    "question": "Frage",
+    "answer": "Antwort",
+    "hide_answer": "Antwort verstecken",
+    "show_answer": "Antwort anzeigen",
+    "stat": "Akutelle Statistik für",
+    "to_project": "Zurück zum Projekt",
+    "spaced_repetition": "Abstandswiederholung"
   }
 }
