--- a/indexcards-ui/src/assets/i18n/de.json
+++ b/indexcards-ui/src/assets/i18n/de.json
@@ -44,6 +44,7 @@
     "spaced_repetition": "Abstandswiederholung",
     "created": "Karteikarte wurde erfolgreich erstellt!",
     "create_tooltip": "Erstelle eine neue Karteikarte",
-    "spaced_repetition_done": "Karteikarten der Abstandswiederholung wurden alle bearbeitet!"
+    "spaced_repetition_done": "Karteikarten der Abstandswiederholung wurden alle bearbeitet!",
+    "required": "Frage und Antwort müssen eingetragen sein, um eine Karteikarte zu erstellen!"
   }
 }
