--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -16,7 +16,14 @@
     "lastname": "Lastname",
     "repeat_password": "Repeat Password",
     "signup": "Create an account",
-    "have_account": "Already have an Account? Then login"
+    "have_account": "Already have an Account? Then login",
+    "fields_required": "All fields are required!",
+    "password_match": "Passwords do not match!",
+    "account_created": "Account was created! Please login!",
+    "wrong_credentials": "Wrong Username or Password!",
+    "username_required": "Username is required",
+    "password_required": "Password is required",
+    "unauthorized": "You need to be logged in to enter this page!"
   },
   "project": {
     "your_projects": "Your Projects",
