--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -52,6 +52,7 @@
     "created": "Index card was successfully created!",
     "create_tooltip": "Create a new index card",
     "spaced_repetition_done": "You played through all index cards of the spaced repetition!",
-    "required": "Answer and Question are required to create an index card!"
+    "required": "Answer and Question are required to create an index card!",
+    "no_index_cards": "Create index cards to start a quiz!"
   }
 }
