--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -54,5 +54,15 @@
     "spaced_repetition_done": "You played through all index cards of the spaced repetition!",
     "required": "Answer and Question are required to create an index card!",
     "no_index_cards": "Create index cards to start a quiz!"
+  },
+  "backend": {
+    "username_exists": "Username already exists!",
+    "username_not_found": "Username not found",
+    "project_name_exists": "A project with this name already exists",
+    "project_name_too_long": "The name of the project was too long, only 100 characters are allowed",
+    "project_not_found": "Project not found",
+    "indexcard_not_found": "Index card not found",
+    "indexcard_question_too_long": "The question of the index card was too long, only 500 characters are allowed",
+    "indexcard_answer_too_long": "The answer of the index card was too long, only 500 characters are allowed"
   }
 }
