--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -64,5 +64,9 @@
     "indexcard_not_found": "Index card not found",
     "indexcard_question_too_long": "The question of the index card was too long, only 500 characters are allowed",
     "indexcard_answer_too_long": "The answer of the index card was too long, only 500 characters are allowed"
-  }
+  },
+  "unrated": "Unrated",
+  "bad": "Bad",
+  "ok": "Ok",
+  "good": "Good"
 }
