feat: connected backend to frontend

--- a/indexcards-ui/src/assets/i18n/de.json
+++ b/indexcards-ui/src/assets/i18n/de.json
@@ -53,7 +53,8 @@
     "create_tooltip": "Erstelle eine neue Karteikarte",
     "spaced_repetition_done": "Karteikarten der Abstandswiederholung wurden alle bearbeitet!",
     "required": "Frage und Antwort müssen eingetragen sein, um eine Karteikarte zu erstellen!",
-    "no_index_cards": "Erstelle Karteikarten, um das Quiz zu starten!"
+    "no_index_cards": "Erstelle Karteikarten, um das Quiz zu starten!",
+    "deleted": "Karteikarte wurde erfolgreich gelöscht!"
   },
   "backend": {
     "username_exists": "Nutzername existiert bereits!",
