feat: created html for edit index card

--- a/indexcards-ui/src/assets/i18n/de.json
+++ b/indexcards-ui/src/assets/i18n/de.json
@@ -55,7 +55,8 @@
     "required": "Frage und Antwort müssen eingetragen sein, um eine Karteikarte zu erstellen!",
     "no_index_cards": "Erstelle Karteikarten, um das Quiz zu starten!",
     "deleted": "Karteikarte wurde erfolgreich gelöscht!",
-    "delete_confirmation": "Bist du dir sicher, dass du die Karteikarte löschen willst?"
+    "delete_confirmation": "Bist du dir sicher, dass du die Karteikarte löschen willst?",
+    "edit": "Bearbeite die Karteikarte"
   },
   "backend": {
     "username_exists": "Nutzername existiert bereits!",
