--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -55,7 +55,8 @@
     "required": "Answer and Question are required to create an index card!",
     "no_index_cards": "Create index cards to start a quiz!",
     "deleted": "Index card was successfully deleted!",
-    "delete_confirmation": "Are you sure that you want to delete this index card?"
+    "delete_confirmation": "Are you sure that you want to delete this index card?",
+    "edit": "Edit index card"
   },
   "backend": {
     "username_exists": "Username already exists!",
