--- a/indexcards-ui/src/assets/i18n/en.json
+++ b/indexcards-ui/src/assets/i18n/en.json
@@ -54,7 +54,8 @@
     "spaced_repetition_done": "You played through all index cards of the spaced repetition!",
     "required": "Answer and Question are required to create an index card!",
     "no_index_cards": "Create index cards to start a quiz!",
-    "deleted": "Index card was successfully deleted!"
+    "deleted": "Index card was successfully deleted!",
+    "edit": "Edit index card"
   },
   "backend": {
     "username_exists": "Username already exists!",
