feat: project and create project page

--- a/indexcards-ui/src/assets/i18n/de.json
+++ b/indexcards-ui/src/assets/i18n/de.json
@@ -19,7 +19,7 @@
     "have_account": "Du hast bereits ein Konto? Dann melde dich an: ",
     "fields_required": "Alle Felder müssen ausgefüllt werden!",
     "password_match": "Passwörter sind nicht gleich!",
-    "account_created": "Konto wurder erstellt! Bitte melde dich an!",
+    "account_created": "Konto wurde erstellt! Bitte melde dich an!",
     "username_required": "Nutzername ist ein Pflichtfeld",
     "password_required": "Passwort ist ein Pflichtfeld",
     "unauthorized": "Du musst angemeldet sein, um auf diese Seite zu kommen!"
